QtQml: Re-run complete compilation pipeline on checksum mismatch

We should not trust anything from the failed CU anymore. In particular,
the string indices may be different in the new document created from
source, and that will result in problems further down the line.

Checksum mismatches shouldn't happen too often, and the previous code is
clearly fragile.

Pick-to: 6.8 6.5
Fixes: QTBUG-136810
Change-Id: I029e95cc4a52e8b1a528ca93ce594426b76be9d1
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit 43ba05526a338eff5f942e64e21d8ff94f3c27a0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>